--- a/src/once-ui/styles/breakpoints.scss
+++ b/src/once-ui/styles/breakpoints.scss
@@ -1,3 +1,21 @@
-@custom-media --s (max-width: 768px);
-@custom-media --m (max-width: 1024px);
-@custom-media --l (max-width: 1440px);
+$breakpoint-s: 768px;
+$breakpoint-m: 1024px;
+$breakpoint-l: 1440px;
+
+@mixin s {
+  @media (max-width: #{$breakpoint-s}) {
+    @content;
+  }
+}
+
+@mixin m {
+  @media (max-width: #{$breakpoint-m}) {
+    @content;
+  }
+}
+
+@mixin l {
+  @media (max-width: #{$breakpoint-l}) {
+    @content;
+  }
+}
