--- a/src/once-ui/styles/layout.scss
+++ b/src/once-ui/styles/layout.scss
@@ -1,3 +1,5 @@
+@use "../styles/breakpoints.scss" as breakpoints;
+
 .display-flex {
     display: flex;
 }
@@ -38,7 +40,7 @@
     display: none !important;
 }
 
-@media (--l) {
+@include breakpoints.l {
     .l-flex-hide {
         display: none !important;
     }
@@ -64,7 +66,7 @@
     }
 }
 
-@media (--m) {
+@include breakpoints.m {
     .m-flex-hide {
         display: none !important;
     }
@@ -90,7 +92,7 @@
     }
 }
 
-@media (--s) {
+@include breakpoints.s {
     .s-flex-hide {
         display: none !important;
     }
