--- a/src/once-ui/tokens/layout.scss
+++ b/src/once-ui/tokens/layout.scss
@@ -1,3 +1,5 @@
+@use "../styles/breakpoints.scss" as breakpoints;
+
 :root {
     --static-space-0:   0;
     --static-space-1:   1px;
@@ -59,7 +61,7 @@
     --responsive-space-xs: var(--static-space-12);
 }
 
-@media (--m) {
+@include breakpoints.m {
     :root {
         --responsive-width-xl: var(--static-width-1024);
         --responsive-width-l:  var(--static-width-1024);
@@ -81,7 +83,7 @@
     }
 }
 
-@media (--s) {
+@include breakpoints.s {
     :root {
         --responsive-width-xl: var(--static-width-1024);
         --responsive-width-l:  var(--static-width-1024);
