--- a/src/once-ui/tokens/typography.scss
+++ b/src/once-ui/tokens/typography.scss
@@ -1,3 +1,5 @@
+@use "../styles/breakpoints.scss" as breakpoints;
+
 :root {
     /* FONT WEIGHT */
     --font-weight-thin:            100;
@@ -67,7 +69,7 @@
     --line-height-label-s:         1rem;
 }
 
-@media (--m) {
+@include breakpoints.m {
     :root {
         /* FONT SIZE */
         --font-size-display-xl:    3.5rem;
@@ -93,7 +95,7 @@
     }
 }
 
-@media (--s) {
+@include breakpoints.s {
     :root {
         /* FONT SIZE */
         --font-size-display-xl:    2.75rem;
