refact: simplify font management

--- a/packages/core/src/modules/code/CodeBlock.module.scss
+++ b/packages/core/src/modules/code/CodeBlock.module.scss
@@ -1,7 +1,7 @@
 .pre {
     display: flex;
     isolation: isolate;
-    font-family: var(--font-family-code);
+    font-family: var(--font-code);
     color: var(--neutral-on-background-strong);
     font-size: var(--font-size-body-s);
     white-space: pre;
