--- a/packages/core/src/styles/global.scss
+++ b/packages/core/src/styles/global.scss
@@ -56,7 +56,7 @@ blockquote {
         margin: 0 !important;
         padding: var(--static-space-16) var(--static-space-24);
         color: var(--brand-on-background-medium) !important;
-        font-family: var(--font-family-code) !important;
+        font-family: var(--font-code) !important;
     }
 }
 
