fix: color token

--- a/packages/core/src/components/SharedInteractiveStyles.module.scss
+++ b/packages/core/src/components/SharedInteractiveStyles.module.scss
@@ -19,7 +19,7 @@
     min-width: var(--static-space-20);
     min-height: var(--static-space-20);
     transition: var(--transition-micro-medium);
-    background-color: var(--background-surface);
+    background-color: var(--surface-background);
     outline: none;
 
     &.checked {
