feat: add ContextMenu and brand asset functions to Logo component

--- a/packages/core/src/components/Option.module.scss
+++ b/packages/core/src/components/Option.module.scss
@@ -4,6 +4,7 @@
     &:hover, &:focus {
         background: var(--neutral-alpha-weak);
         border-color: var(--neutral-alpha-medium);
+        outline: none;
     }
     
     &.selected {
