--- a/packages/core/src/components/Button.module.scss
+++ b/packages/core/src/components/Button.module.scss
@@ -13,12 +13,15 @@
         z-index: 1;
     }
 
+    &:focus {
+        outline: none;
+    }
+
     &:disabled {
         box-shadow: none;
         cursor: not-allowed;
         background: var(--neutral-background-medium);
         color: var(--neutral-on-background-weak);
-        border: 1px solid var(--neutral-alpha-weak);
     }
 }
 
@@ -55,7 +58,7 @@
         &:disabled {
             background: var(--neutral-background-medium);
             color: var(--neutral-on-background-weak);
-            border: 1px solid var(--neutral-alpha-weak);
+            border: 1px solid var(--static-transparent);
         }
     }
 }
@@ -71,7 +74,7 @@
         &:disabled {
             background: var(--neutral-background-medium);
             color: var(--neutral-on-background-weak);
-            border: 1px solid var(--neutral-alpha-weak);
+            border: 1px solid var(--static-transparent);
         }
     }
 }
