improved layout engine

--- a/packages/core/src/components/Button.module.scss
+++ b/packages/core/src/components/Button.module.scss
@@ -58,7 +58,7 @@
         &:disabled {
             background: var(--neutral-background-medium);
             color: var(--neutral-on-background-weak);
-            border: 1px solid var(--static-transparent);
+            border: 1px solid var(--neutral-alpha-weak);
         }
     }
 }
