--- a/packages/core/src/styles/flex.scss
+++ b/packages/core/src/styles/flex.scss
@@ -1,3 +1,5 @@
+@use "../styles/breakpoints.scss" as breakpoints;
+
 .justify-start {
   justify-content: flex-start;
 }
@@ -10,15 +12,15 @@
   justify-content: flex-end;
 }
 
-.justify-space-between {
+.justify-between {
   justify-content: space-between;
 }
 
-.justify-space-around {
+.justify-around {
   justify-content: space-around;
 }
 
-.justify-space-evenly {
+.justify-even {
   justify-content: space-evenly;
 }
 
@@ -38,15 +40,15 @@
   align-items: flex-end;
 }
 
-.align-space-between {
+.align-between {
   align-items: space-between;
 }
 
-.align-space-around {
+.align-around {
   align-items: space-around;
 }
 
-.align-space-evenly {
+.align-even {
   align-items: space-evenly;
 }
 
@@ -121,4 +123,193 @@
 
 .flex-12 {
   flex: 12;
+}
+
+@include breakpoints.l {
+  .l-justify-start {
+    justify-content: flex-start;
+  }
+    
+  .l-justify-center {
+    justify-content: center;
+  }
+  
+  .l-justify-end {
+    justify-content: flex-end;
+  }
+  
+  .l-justify-between {
+    justify-content: space-between;
+  }
+  
+  .l-justify-around {
+    justify-content: space-around;
+  }
+  
+  .l-justify-even {
+    justify-content: space-evenly;
+  }
+  
+  .l-justify-stretch {
+    justify-content: stretch;
+  }
+  
+  .l-align-start {
+    align-items: flex-start;
+  }
+  
+  .l-align-center {
+    align-items: center;
+  }
+  
+  .l-align-end {
+    align-items: flex-end;
+  }
+  
+  .l-align-between {
+    align-items: space-between;
+  }
+  
+  .l-align-around {
+    align-items: space-around;
+  }
+  
+  .l-align-even {
+    align-items: space-evenly;
+  }
+  
+  .l-align-stretch {
+    align-items: stretch;
+  }
+  
+  .l-center {
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@include breakpoints.m {
+  .m-justify-start {
+    justify-content: flex-start;
+  }
+    
+  .m-justify-center {
+    justify-content: center;
+  }
+  
+  .m-justify-end {
+    justify-content: flex-end;
+  }
+  
+  .m-justify-between {
+    justify-content: space-between;
+  }
+  
+  .m-justify-around {
+    justify-content: space-around;
+  }
+  
+  .m-justify-even {
+    justify-content: space-evenly;
+  }
+  
+  .m-justify-stretch {
+    justify-content: stretch;
+  }
+  
+  .m-align-start {
+    align-items: flex-start;
+  }
+  
+  .m-align-center {
+    align-items: center;
+  }
+  
+  .m-align-end {
+    align-items: flex-end;
+  }
+  
+  .m-align-between {
+    align-items: space-between;
+  }
+  
+  .m-align-around {
+    align-items: space-around;
+  }
+  
+  .m-align-even {
+    align-items: space-evenly;
+  }
+  
+  .m-align-stretch {
+    align-items: stretch;
+  }
+  
+  .m-center {
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@include breakpoints.s {
+  .s-justify-start {
+    justify-content: flex-start;
+  }
+    
+  .s-justify-center {
+    justify-content: center;
+  }
+  
+  .s-justify-end {
+    justify-content: flex-end;
+  }
+  
+  .s-justify-between {
+    justify-content: space-between;
+  }
+  
+  .s-justify-around {
+    justify-content: space-around;
+  }
+  
+  .s-justify-even {
+    justify-content: space-evenly;
+  }
+  
+  .s-justify-stretch {
+    justify-content: stretch;
+  }
+  
+  .s-align-start {
+    align-items: flex-start;
+  }
+  
+  .s-align-center {
+    align-items: center;
+  }
+  
+  .s-align-end {
+    align-items: flex-end;
+  }
+  
+  .s-align-between {
+    align-items: space-between;
+  }
+  
+  .s-align-around {
+    align-items: space-around;
+  }
+  
+  .s-align-even {
+    align-items: space-evenly;
+  }
+  
+  .s-align-stretch {
+    align-items: stretch;
+  }
+  
+  .s-center {
+    align-items: center;
+    justify-content: center;
+  }
 }
