--- a/packages/core/src/styles/flex.scss
+++ b/packages/core/src/styles/flex.scss
@@ -1,5 +1,41 @@
 @use "../styles/breakpoints.scss" as breakpoints;
 
+.display-flex {
+  display: flex;
+}
+
+.display-inline-flex {
+  display: inline-flex;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column-reverse {
+  flex-direction: column-reverse;
+}
+
+.flex-row-reverse {
+  flex-direction: row-reverse;
+}
+
+.l-flex-show {
+  display: none;
+}
+
+.m-flex-show {
+  display: none;
+}
+
+.s-flex-show {
+  display: none;
+}
+
 .justify-start {
   justify-content: flex-start;
 }
@@ -126,6 +162,30 @@
 }
 
 @include breakpoints.l {
+  .l-flex-hide {
+      display: none;
+  }
+
+  .l-flex-show {
+      display: flex;
+  }
+
+  .l-flex-column {
+      flex-direction: column;
+  }
+
+  .l-flex-row {
+      flex-direction: row;
+  }
+
+  .l-flex-column-reverse {
+      flex-direction: column-reverse;
+  }
+  
+  .l-flex-row-reverse {
+      flex-direction: row-reverse;
+  }
+
   .l-justify-start {
     justify-content: flex-start;
   }
@@ -189,6 +249,30 @@
 }
 
 @include breakpoints.m {
+  .m-flex-hide {
+      display: none;
+  }
+
+  .m-flex-show {
+      display: flex;
+  }
+
+  .m-flex-column {
+      flex-direction: column;
+  }
+
+  .m-flex-row {
+      flex-direction: row;
+  }
+
+  .m-flex-column-reverse {
+      flex-direction: column-reverse;
+  }
+  
+  .m-flex-row-reverse {
+      flex-direction: row-reverse;
+  }
+
   .m-justify-start {
     justify-content: flex-start;
   }
@@ -252,6 +336,30 @@
 }
 
 @include breakpoints.s {
+  .s-flex-hide {
+      display: none;
+  }
+
+  .s-flex-show {
+      display: flex;
+  }
+
+  .s-flex-column {
+      flex-direction: column;
+  }
+
+  .s-flex-row {
+      flex-direction: row;
+  }
+
+  .s-flex-column-reverse {
+      flex-direction: column-reverse;
+  }
+  
+  .s-flex-row-reverse {
+      flex-direction: row-reverse;
+  }
+  
   .s-justify-start {
     justify-content: flex-start;
   }
