--- a/packages/core/src/styles/border.scss
+++ b/packages/core/src/styles/border.scss
@@ -295,6 +295,16 @@
     border-right-width: 1px;
 }
 
+.border-x-1 {
+    border-left-width: 1px;
+    border-right-width: 1px;
+}
+
+.border-y-1 {
+    border-top-width: 1px;
+    border-bottom-width: 1px;
+}
+
   /****************************/
  /*           COLOR          */
 /****************************/
