--- a/packages/core/src/components/Button.module.scss
+++ b/packages/core/src/components/Button.module.scss
@@ -39,7 +39,7 @@
         &:disabled {
             background: var(--neutral-background-medium);
             color: var(--neutral-on-background-weak);
-            border: 1px solid var(--neutral-alpha-weak);
+            border: none;
         }
     }
 }
@@ -109,7 +109,7 @@
         &:disabled {
             background: var(--neutral-background-medium);
             color: var(--neutral-on-background-weak);
-            border: 1px solid var(--neutral-alpha-weak);
+            border: none;
         }
     }
 }
