fix: add hide classes in addition to server-side conditional rendering for performance

--- a/packages/core/src/styles/flex.scss
+++ b/packages/core/src/styles/flex.scss
@@ -161,6 +161,14 @@
   flex: 12;
 }
 
+.flex-hide {
+  display: none;
+}
+
+.flex-show {
+  display: flex;
+}
+
 @include breakpoints.l {
   .l-flex-hide {
       display: none;
