--- a/packages/core/src/styles/border.scss
+++ b/packages/core/src/styles/border.scss
@@ -272,6 +272,18 @@
     border-width: 2px;
 }
 
+.border-4 {
+    border-width: 4px;
+}
+
+.border-6 {
+    border-width: 6px;
+}
+
+.border-8 {
+    border-width: 8px;
+}
+
 .border-reset {
     border-top-width: 0;
     border-right-width: 0;
