--- a/packages/core/src/styles/position.scss
+++ b/packages/core/src/styles/position.scss
@@ -1237,3 +1237,313 @@
     right: var(--static-space-160);
   }
 }
+
+@include breakpoints.xs {
+  .xs-position-relative {
+    position: relative;
+  }
+
+  .xs-position-fixed {
+    position: fixed;
+  }
+
+  .xs-position-absolute {
+    position: absolute;
+  }
+
+  .xs-position-sticky {
+    position: sticky;
+  }
+
+  .xs-position-static {
+    position: static;
+  }
+
+  .xs-top-0 {
+    top: 0;
+  }
+
+  .xs-left-0 {
+    left: 0;
+  }
+
+  .xs-bottom-0 {
+    bottom: 0;
+  }
+
+  .xs-right-0 {
+    right: 0;
+  }
+
+  .xs-top-1 {
+    top: var(--static-space-1);
+  }
+
+  .xs-left-1 {
+    left: var(--static-space-1);
+  }
+
+  .xs-bottom-1 {
+    bottom: var(--static-space-1);
+  }
+
+  .xs-right-1 {
+    right: var(--static-space-1);
+  }
+
+  .xs-top-2 {
+    top: var(--static-space-2);
+  }
+
+  .xs-left-2 {
+    left: var(--static-space-2);
+  }
+
+  .xs-bottom-2 {
+    bottom: var(--static-space-2);
+  }
+
+  .xs-right-2 {
+    right: var(--static-space-2);
+  }
+
+  .xs-top-4 {
+    top: var(--static-space-4);
+  }
+
+  .xs-left-4 {
+    left: var(--static-space-4);
+  }
+
+  .xs-bottom-4 {
+    bottom: var(--static-space-4);
+  }
+
+  .xs-right-4 {
+    right: var(--static-space-4);
+  }
+
+  .xs-top-8 {
+    top: var(--static-space-8);
+  }
+
+  .xs-left-8 {
+    left: var(--static-space-8);
+  }
+
+  .xs-bottom-8 {
+    bottom: var(--static-space-8);
+  }
+
+  .xs-right-8 {
+    right: var(--static-space-8);
+  }
+
+  .xs-top-12 {
+    top: var(--static-space-12);
+  }
+
+  .xs-left-12 {
+    left: var(--static-space-12);
+  }
+
+  .xs-bottom-12 {
+    bottom: var(--static-space-12);
+  }
+
+  .xs-right-12 {
+    right: var(--static-space-12);
+  }
+
+  .xs-top-16 {
+    top: var(--static-space-16);
+  }
+
+  .xs-left-16 {
+    left: var(--static-space-16);
+  }
+
+  .xs-bottom-16 {
+    bottom: var(--static-space-16);
+  }
+
+  .xs-right-16 {
+    right: var(--static-space-16);
+  }
+
+  .xs-top-20 {
+    top: var(--static-space-20);
+  }
+
+  .xs-left-20 {
+    left: var(--static-space-20);
+  }
+
+  .xs-bottom-20 {
+    bottom: var(--static-space-20);
+  }
+
+  .xs-right-20 {
+    right: var(--static-space-20);
+  }
+
+  .xs-top-24 {
+    top: var(--static-space-24);
+  }
+
+  .xs-left-24 {
+    left: var(--static-space-24);
+  }
+
+  .xs-bottom-24 {
+    bottom: var(--static-space-24);
+  }
+
+  .xs-right-24 {
+    right: var(--static-space-24);
+  }
+
+  .xs-top-32 {
+    top: var(--static-space-32);
+  }
+
+  .xs-left-32 {
+    left: var(--static-space-32);
+  }
+
+  .xs-bottom-32 {
+    bottom: var(--static-space-32);
+  }
+
+  .xs-right-32 {
+    right: var(--static-space-32);
+  }
+
+  .xs-top-40 {
+    top: var(--static-space-40);
+  }
+
+  .xs-left-40 {
+    left: var(--static-space-40);
+  }
+
+  .xs-bottom-40 {
+    bottom: var(--static-space-40);
+  }
+
+  .xs-right-40 {
+    right: var(--static-space-40);
+  }
+
+  .xs-top-48 {
+    top: var(--static-space-48);
+  }
+
+  .xs-left-48 {
+    left: var(--static-space-48);
+  }
+
+  .xs-bottom-48 {
+    bottom: var(--static-space-48);
+  }
+
+  .xs-right-48 {
+    right: var(--static-space-48);
+  }
+
+  .xs-top-56 {
+    top: var(--static-space-56);
+  }
+
+  .xs-left-56 {
+    left: var(--static-space-56);
+  }
+
+  .xs-bottom-56 {
+    bottom: var(--static-space-56);
+  }
+
+  .xs-right-56 {
+    right: var(--static-space-56);
+  }
+
+  .xs-top-64 {
+    top: var(--static-space-64);
+  }
+
+  .xs-left-64 {
+    left: var(--static-space-64);
+  }
+
+  .xs-bottom-64 {
+    bottom: var(--static-space-64);
+  }
+
+  .xs-right-64 {
+    right: var(--static-space-64);
+  }
+
+  .xs-top-80 {
+    top: var(--static-space-80);
+  }
+
+  .xs-left-80 {
+    left: var(--static-space-80);
+  }
+
+  .xs-bottom-80 {
+    bottom: var(--static-space-80);
+  }
+
+  .xs-right-80 {
+    right: var(--static-space-80);
+  }
+
+  .xs-top-104 {
+    top: var(--static-space-104);
+  }
+
+  .xs-left-104 {
+    left: var(--static-space-104);
+  }
+
+  .xs-bottom-104 {
+    bottom: var(--static-space-104);
+  }
+
+  .xs-right-104 {
+    right: var(--static-space-104);
+  }
+
+  .xs-top-128 {
+    top: var(--static-space-128);
+  }
+
+  .xs-left-128 {
+    left: var(--static-space-128);
+  }
+
+  .xs-bottom-128 {
+    bottom: var(--static-space-128);
+  }
+
+  .xs-right-128 {
+    right: var(--static-space-128);
+  }
+
+  .xs-top-160 {
+    top: var(--static-space-160);
+  }
+
+  .xs-left-160 {
+    left: var(--static-space-160);
+  }
+
+  .xs-bottom-160 {
+    bottom: var(--static-space-160);
+  }
+
+  .xs-right-160 {
+    right: var(--static-space-160);
+  }
+}
