--- a/packages/core/src/styles/typography.scss
+++ b/packages/core/src/styles/typography.scss
@@ -19,6 +19,12 @@ html {
     }
 }
 
+@include breakpoints.xs {
+    html {
+        font-size: var(--font-scaling-mobile);
+    }
+}
+
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
