fix: update breakpoints to fixed pixel values and enhance responsive class handling

--- a/packages/core/src/styles/global.scss
+++ b/packages/core/src/styles/global.scss
@@ -11,12 +11,12 @@ img {
     user-select: none;
 }
 
-:root {
-  --breakpoint-xs: 480px;
-  --breakpoint-s: 768px;
-  --breakpoint-m: 1024px;
-  --breakpoint-l: 1440px;
-}
+/*:root {
+    --breakpoint-xs: 480px;
+    --breakpoint-s: 768px;
+    --breakpoint-m: 1024px;
+    --breakpoint-l: 1440px;
+ } */
 
 /* SELECTION */
 ::selection {
