--- a/packages/core/src/styles/breakpoints.scss
+++ b/packages/core/src/styles/breakpoints.scss
@@ -1,7 +1,7 @@
-$breakpoint-xs: var(--breakpoint-xs);
-$breakpoint-s: var(--breakpoint-s);
-$breakpoint-m: var(--breakpoint-m);
-$breakpoint-l: var(--breakpoint-l);
+$breakpoint-xs: 480px;
+$breakpoint-s: 768px;
+$breakpoint-m: 1024px;
+$breakpoint-l: 1440px;
 
 @mixin xs {
   @media (max-width: #{$breakpoint-xs}) {
