--- a/packages/core/src/modules/code/CodeHighlight.css
+++ b/packages/core/src/modules/code/CodeHighlight.css
@@ -91,6 +91,7 @@
   left: 0;
   margin-top: var(--static-space-8);
   z-index: 0;
+  pointer-events: none;
 }
 
 .line-numbers .line-highlight:before,
