fix: diff-sign clip fix

--- a/packages/core/src/modules/code/CodeHighlight.css
+++ b/packages/core/src/modules/code/CodeHighlight.css
@@ -233,6 +233,8 @@
   text-align: center;
   font-weight: var(--font-weight-medium);
   user-select: none;
+  display: inline-flex;
+  margin-right: var(--static-space-8);
 }
 
 .language-diff .diff-row.added .diff-sign::before {
